[prometheus-node-exporter] Add Termination Msg Params to Daemonset (#4191)
* added more customizable vars for volumes and where termination message paths should go

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added additional vars for termination msg pts, env vars for kuberbacproxy and termination grace period seconds

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* flip kuberbacproxy to false again

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added notes for env var and for restart policy
Added notes in vals files and restart policy
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added definition in values file for volumemounts type

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* remove small fix for bug for later pr

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* fix version

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* remove most changes except for termination params

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* remove env from the ds

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* using suggestion, used a toggle instead for setting termination message paths

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* revert krp and terminationmsgpath back to false from true that was set for testing

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* Added with statement for termination grace period

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* disable termination msg path

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added null or 30 default message

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

---------

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -40,6 +40,9 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "prometheus-node-exporter.serviceAccountName" . }}
+      {{- with .Values.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ . }}
+      {{- end }}
       containers:
         {{- $servicePort := ternary .Values.kubeRBACProxy.port .Values.service.port .Values.kubeRBACProxy.enabled }}
         - name: node-exporter
@@ -123,6 +126,12 @@ spec:
           {{- with .Values.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- if .Values.terminationMessageParams.enabled }}
+          {{- with .Values.terminationMessageParams }}
+          terminationMessagePath: {{ .terminationMessagePath }}
+          terminationMessagePolicy: {{ .terminationMessagePolicy }}
+          {{- end }}
           {{- end }}
           volumeMounts:
             - name: proc
@@ -208,6 +217,12 @@ spec:
           {{- if .Values.kubeRBACProxy.resources }}
           resources:
           {{ toYaml .Values.kubeRBACProxy.resources | nindent 12 }}
+          {{- end }}
+          {{- if .Values.terminationMessageParams.enabled }}
+          {{- with .Values.terminationMessageParams }}
+          terminationMessagePath: {{ .terminationMessagePath }}
+          terminationMessagePolicy: {{ .terminationMessagePolicy }}
+          {{- end }}
           {{- end }}
           {{- if .Values.kubeRBACProxy.containerSecurityContext }}
           securityContext:
