Add: support connz_detailed metrics
Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -37,6 +37,9 @@ spec:
             {{- if .Values.config.metrics.connz }}
             - "-connz"
             {{- end }}
+            {{- if .Values.config.metrics.connz_detailed }}
+            - "-connz_detailed"
+            {{- end }}
             {{- if .Values.config.metrics.routez }}
             - "-routez"
             {{- end }}
