--- a/charts/prometheus-nats-exporter/values.yaml
+++ b/charts/prometheus-nats-exporter/values.yaml
@@ -45,6 +45,7 @@ config:
   metrics:
     channelz: true
     connz: true
+    connz_detailed: true
     jsz: true
     gatewayz: true
     leafz: true
