Add: support accstatz metrics
Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -31,6 +31,9 @@ spec:
             {{- if .Values.config.metrics.varz }}
             - "-varz"
             {{- end }}
+            {{- if .Values.config.metrics.accstatz }}
+            - "-accstatz"
+            {{- end }}
             {{- if .Values.config.metrics.channelz }}
             - "-channelz"
             {{- end }}
