--- a/charts/prometheus-nats-exporter/values.yaml
+++ b/charts/prometheus-nats-exporter/values.yaml
@@ -43,6 +43,7 @@ config:
     namespace: default
     port: 8222
   metrics:
+    accstatz: true
     channelz: true
     connz: true
     connz_detailed: true
