--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -325,7 +325,7 @@ hostProcFsMount:
 
 # Mount the node's sys file system (/) at /host/sys in the container
 hostSysFsMount:
-  enabled: true
+  enabled: false
   # Possible values are None, HostToContainer, and Bidirectional
   mountPropagation: HostToContainer
 
