--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -240,7 +240,7 @@ statefulSet:
 ## This is an alpha field from kubernetes 1.22 until 1.24 which requires enabling the StatefulSetMinReadySeconds
 ## feature gate.
 ## Ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#minimum-ready-seconds
-# minReadySeconds: 0
+minReadySeconds: 0
 
 podAnnotations: {}
 podLabels: {}
