[prometheus-nats-exporter] Support connz_detailed and accstatz metrics (#4212)
* Add: support connz_detailed metrics

Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

* Add: support accstatz metrics

Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

---------

Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/charts/prometheus-nats-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nats-exporter/templates/deployment.yaml
@@ -31,11 +31,17 @@ spec:
             {{- if .Values.config.metrics.varz }}
             - "-varz"
             {{- end }}
+            {{- if .Values.config.metrics.accstatz }}
+            - "-accstatz"
+            {{- end }}
             {{- if .Values.config.metrics.channelz }}
             - "-channelz"
             {{- end }}
             {{- if .Values.config.metrics.connz }}
             - "-connz"
+            {{- end }}
+            {{- if .Values.config.metrics.connz_detailed }}
+            - "-connz_detailed"
             {{- end }}
             {{- if .Values.config.metrics.routez }}
             - "-routez"
