--- a/charts/prometheus-nats-exporter/values.yaml
+++ b/charts/prometheus-nats-exporter/values.yaml
@@ -43,8 +43,10 @@ config:
     namespace: default
     port: 8222
   metrics:
+    accstatz: true
     channelz: true
     connz: true
+    connz_detailed: true
     jsz: true
     gatewayz: true
     leafz: true
