[alertmanager] Add support for minReadySeconds (#4216)
* [alertmanager] Add support for minReadySeconds

Signed-off-by: Doris Zhou <doris.zhou@appian.com>

* Update charts/alertmanager/templates/statefulset.yaml

Co-authored-by: André Bauer <monotek@users.noreply.github.com>
Signed-off-by: Doris Zhou <53917499+doris-zhou@users.noreply.github.com>

* Update charts/alertmanager/values.yaml

Co-authored-by: André Bauer <monotek@users.noreply.github.com>
Signed-off-by: Doris Zhou <53917499+doris-zhou@users.noreply.github.com>

---------

Signed-off-by: Doris Zhou <doris.zhou@appian.com>
Signed-off-by: Doris Zhou <53917499+doris-zhou@users.noreply.github.com>
Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -12,6 +12,7 @@ metadata:
   namespace: {{ include "alertmanager.namespace" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  minReadySeconds: {{ .Values.minReadySeconds }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
