--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -235,6 +235,13 @@ topologySpreadConstraints: []
 statefulSet:
   annotations: {}
 
+## Minimum number of seconds for which a newly created pod should be ready without any of its container crashing for it to
+## be considered available. Defaults to 0 (pod will be considered available as soon as it is ready).
+## This is an alpha field from kubernetes 1.22 until 1.24 which requires enabling the StatefulSetMinReadySeconds
+## feature gate.
+## Ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#minimum-ready-seconds
+minReadySeconds: 0
+
 podAnnotations: {}
 podLabels: {}
 
