--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -319,15 +319,13 @@ hostRootFsMount:
 
 # Mount the node's proc file system (/) at /host/proc in the container
 hostProcFsMount:
-  enabled: false
   # Possible values are None, HostToContainer, and Bidirectional
-  mountPropagation: HostToContainer
+  mountPropagation: ""
 
 # Mount the node's sys file system (/) at /host/sys in the container
 hostSysFsMount:
-  enabled: false
   # Possible values are None, HostToContainer, and Bidirectional
-  mountPropagation: HostToContainer
+  mountPropagation: ""
 
 ## Assign a group of affinity scheduling rules
 ##
@@ -404,11 +402,11 @@ extraArgs: []
 extraHostVolumeMounts: []
 #  - name: <mountName>
 #    hostPath: <hostPath>
+#      https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
+#      type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 #    mountPath: <mountPath>
 #    readOnly: true|false
 #    mountPropagation: None|HostToContainer|Bidirectional
-#    https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
-#    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 
 
 ## Additional configmaps to be mounted.
