[kube-state-metrics] Update image pull path
Signed-off-by: chesha1 <chesha1@163.com>

--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -1,8 +1,8 @@
 # Default values for kube-state-metrics.
 prometheusScrape: true
 image:
-  registry: registry.k8s.io
-  repository: kube-state-metrics/kube-state-metrics
+  registry: docker.io
+  repository: bitnami/kube-state-metrics
   # If unset use v + .Charts.appVersion
   tag: ""
   sha: ""
