Corrected reference to configmapReload.prometheus.extraConfigmapMounts on sts.yaml
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus/templates/sts.yaml
+++ b/charts/prometheus/templates/sts.yaml
@@ -319,7 +319,7 @@ spec:
           hostPath:
             path: {{ .hostPath }}
       {{- end }}
-      {{- range .Values.configmapReload.prometheus.extraConfigmapMounts }}
+      {{- range .Values.configmapReload.prometheus.extraVolumeMounts }}
         - name: {{ $.Values.configmapReload.prometheus.name }}-{{ .name }}
           configMap:
             name: {{ .configMap }}
