--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -4,7 +4,7 @@ image:
   registry: docker.io
   repository: bitnami/kube-state-metrics
   # If unset use v + .Charts.appVersion
-  tag: ""
+  tag: "2.10.1"
   sha: ""
   pullPolicy: IfNotPresent
 
