[prometheus-snmp-exporter] Add Tom as maintainer
Signed-off-by: Tom Walker <walker.thomas.p@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -45,7 +45,7 @@
 /charts/prometheus-rabbitmq-exporter/ @desaintmartin @iamabhishek-dubey @juanchimienti @monotek
 /charts/prometheus-redis-exporter/ @acondrat @zanhsieh
 /charts/prometheus-smartctl-exporter/ @kfox1111 @zeritti
-/charts/prometheus-snmp-exporter/ @miouge1 @xiu
+/charts/prometheus-snmp-exporter/ @miouge1 @xiu @walker-tom
 /charts/prometheus-stackdriver-exporter/ @apenney @rpahli
 /charts/prometheus-statsd-exporter/ @scDisorder
 /charts/prometheus-systemd-exporter/ @capuche2412 @maxime1907
