--- a/charts/prometheus-snmp-exporter/Chart.yaml
+++ b/charts/prometheus-snmp-exporter/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 description: Prometheus SNMP Exporter
 name: prometheus-snmp-exporter
-version: 1.8.1
+version: 1.8.2
 appVersion: v0.21.0
 home: https://github.com/prometheus/snmp_exporter
 sources:
@@ -15,3 +15,5 @@ maintainers:
     email: maxime@root314.com
   - name: xiu
     email: github@xiu.io
+  - name: walker-tom
+    email: walker.thomas.p@gmail.com
