spacing changes, deindentation changes
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -273,7 +273,7 @@ spec:
         - name: {{ $mount.name }}
           hostPath:
             path: {{ $mount.hostPath }}
-            {{- with $mount.hostPath.type }}
+            {{- with $mount.type }}
             type: {{ . }}
             {{- end }}
         {{- end }}
