--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -317,12 +317,12 @@ hostRootFsMount:
   # https://kubernetes.io/docs/concepts/storage/volumes/#mount-propagation
   mountPropagation: HostToContainer
 
-# Mount the node's proc file system (/) at /host/proc in the container
+# Mount the node's proc file system (/proc) at /host/proc in the container
 hostProcFsMount:
   # Possible values are None, HostToContainer, and Bidirectional
   mountPropagation: ""
 
-# Mount the node's sys file system (/) at /host/sys in the container
+# Mount the node's sys file system (/sys) at /host/sys in the container
 hostSysFsMount:
   # Possible values are None, HostToContainer, and Bidirectional
   mountPropagation: ""
@@ -402,12 +402,11 @@ extraArgs: []
 extraHostVolumeMounts: []
 #  - name: <mountName>
 #    hostPath: <hostPath>
-#      https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
-#      type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
+#    https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
+#    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 #    mountPath: <mountPath>
 #    readOnly: true|false
 #    mountPropagation: None|HostToContainer|Bidirectional
-
 
 ## Additional configmaps to be mounted.
 ##
