[prometheus-node-exporter] Add MountPropagation and VolumeMount Type to Daemonset (#4201)
* added params for mount type and mount propagation

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added some doc links to volume mount type

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added with statement for mount type so it does not have to be set

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added with statement to make type optional and not be set

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* update version

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* disable sysfsmount

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* moved type from volumemounts to volumes

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* spacing changes, deindentation changes

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

---------

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -317,6 +317,16 @@ hostRootFsMount:
   # https://kubernetes.io/docs/concepts/storage/volumes/#mount-propagation
   mountPropagation: HostToContainer
 
+# Mount the node's proc file system (/proc) at /host/proc in the container
+hostProcFsMount:
+  # Possible values are None, HostToContainer, and Bidirectional
+  mountPropagation: ""
+
+# Mount the node's sys file system (/sys) at /host/sys in the container
+hostSysFsMount:
+  # Possible values are None, HostToContainer, and Bidirectional
+  mountPropagation: ""
+
 ## Assign a group of affinity scheduling rules
 ##
 affinity: {}
@@ -392,6 +402,8 @@ extraArgs: []
 extraHostVolumeMounts: []
 #  - name: <mountName>
 #    hostPath: <hostPath>
+#    https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
+#    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 #    mountPath: <mountPath>
 #    readOnly: true|false
 #    mountPropagation: None|HostToContainer|Bidirectional
