--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-apiserver.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-apiserver.yaml
@@ -144,7 +144,7 @@ spec:
 {{- end }}
         description: KubeAPI has disappeared from Prometheus target discovery.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeapidown
-        summary: Target disappeared from Prometheus target discovery.
+        summary: Target disappeared from Prometheus target discovery PLEASE CHECH IT.
       expr: absent(up{job="apiserver"} == 1)
       for: 15m
       {{- with .Values.defaultRules.keepFiringFor }}
