--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-kubelet.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-kubelet.yaml
@@ -364,7 +364,7 @@ spec:
 {{- end }}
         description: Kubelet has disappeared from Prometheus target discovery.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeletdown
-        summary: Target disappeared from Prometheus target discovery.
+        summary: Target disappeared from Prometheus target discovery PLEASE CHECH IT.
       expr: absent(up{job="kubelet", metrics_path="/metrics"} == 1)
       for: 15m
       {{- with .Values.defaultRules.keepFiringFor }}
