--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-controller-manager.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-controller-manager.yaml
@@ -36,7 +36,7 @@ spec:
 {{- end }}
         description: KubeControllerManager has disappeared from Prometheus target discovery.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubecontrollermanagerdown
-        summary: Target disappeared from Prometheus target discovery.
+        summary: Target disappeared from Prometheus target discovery PLEASE CHECH IT.
       expr: absent(up{job="kube-controller-manager"} == 1)
       for: 15m
       {{- with .Values.defaultRules.keepFiringFor }}
