--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-kube-proxy.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kubernetes-system-kube-proxy.yaml
@@ -37,7 +37,7 @@ spec:
       {{- end }}
         description: KubeProxy has disappeared from Prometheus target discovery.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/kubernetes/kubeproxydown
-        summary: Target disappeared from Prometheus target discovery.
+        summary: Target disappeared from Prometheus target discovery PLEASE CHECH IT.
       expr: absent(up{job="kube-proxy"} == 1)
       for: 15m
       {{- with .Values.defaultRules.keepFiringFor }}
