--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -232,7 +232,7 @@ spec:
           {{- end }}
           {{- with .Values.kubeRBACProxy.env }}
           env:
-            {{- range $key, $value := .Values.kubeRBACProxy.env }}
+            {{- range $key, $value := $.Values.kubeRBACProxy.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
