[prometheus-node-exporter] Add Support for Environment Variables for KubeRBACProxy Container (#4202)
* add support for env vars for kuberbacproxy container

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* remove extra space in env braces

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* rebase from main and change env var for krp to with from if

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* update version

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* syntax fix

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

---------

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -39,6 +39,9 @@ global:
 # The requests are served through the same service but requests are HTTPS.
 kubeRBACProxy:
   enabled: false
+  ## Set environment variables as name/value pairs
+  env: {}
+    # VARIABLE: value
   image:
     registry: quay.io
     repository: brancz/kube-rbac-proxy
