--- a/charts/prometheus/templates/sts.yaml
+++ b/charts/prometheus/templates/sts.yaml
@@ -102,8 +102,7 @@ spec:
               mountPath: /etc/config
               readOnly: true
           {{- with .Values.configmapReload.prometheus.extraVolumeMounts }}
-              extraVolumeMounts:
-                {{ toYaml . | nindent 16 }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- range .Values.configmapReload.prometheus.extraConfigmapMounts }}
             - name: {{ $.Values.configmapReload.prometheus.name }}-{{ .name }}
