✨introduce helper for service & depl annotations
Signed-off-by: lukasklinger <mail@lukasklinger.com>

--- a/charts/prometheus-nginx-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nginx-exporter/templates/deployment.yaml
@@ -25,9 +25,7 @@ spec:
       labels:
         {{- include "prometheus-nginx-exporter.labels" . | indent 8 }}
       annotations:
-      {{- with .Values.additionalAnnotations }}
-      {{ toYaml . | indent 6 }}
-      {{- end }}
+        {{- include "prometheus-nginx-exporter.podAnnotations" . | indent 8 }}
     spec:
       serviceAccountName: {{ template "prometheus-nginx-exporter.serviceAccountName" . }}
       {{- with .Values.initContainers }}
