--- a/charts/prometheus-nginx-exporter/templates/service.yaml
+++ b/charts/prometheus-nginx-exporter/templates/service.yaml
@@ -4,13 +4,8 @@ kind: Service
 metadata:
   name: {{ include "prometheus-nginx-exporter.fullname" . }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
-  {{- if or .Values.service.annotations .Values.additionalAnnotations }}
   annotations:
-  {{ toYaml .Values.service.annotations | indent 4 }}
-  {{- with .Values.additionalAnnotations }}
-  {{ toYaml . | indent 4 }}
-  {{- end }}
-  {{- end }}
+    {{- include "prometheus-nginx-exporter.serviceAnnotations" . | indent 4 }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
 spec:
