♻️ refactor use of additional annotations
Signed-off-by: lukasklinger <mail@lukasklinger.com>

--- a/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
@@ -5,10 +5,7 @@ kind: ServiceMonitor
 metadata:
   name: {{ template "prometheus-nginx-exporter.fullname" .  }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
-  {{- if .Values.additionalAnnotations }}
-  annotations:
-  {{ toYaml .Values.additionalAnnotations | indent 4 }}
-  {{- end }}
+  annotations: {{ toYaml .Values.additionalAnnotations | nindent 4 }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
     {{- if .Values.serviceMonitor.additionalLabels }}
