--- a/charts/prometheus-nginx-exporter/templates/role.yaml
+++ b/charts/prometheus-nginx-exporter/templates/role.yaml
@@ -5,10 +5,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "prometheus-nginx-exporter.fullname" . }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
-  {{- if .Values.additionalAnnotations }}
-  annotations:
-  {{ toYaml .Values.additionalAnnotations | indent 4 }}
-  {{- end }}
+  annotations: {{ toYaml .Values.additionalAnnotations | nindent 4 }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
 rules:
