--- a/charts/prometheus-nginx-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-nginx-exporter/templates/serviceaccount.yaml
@@ -3,10 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- if .Values.additionalAnnotations }}
-  annotations:
-  {{ toYaml .Values.additionalAnnotations | indent 4 }}
-  {{- end }}
+  annotations: {{ toYaml .Values.additionalAnnotations | nindent 4 }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
   name: {{ template "prometheus-nginx-exporter.serviceAccountName" . }}
