--- a/charts/kube-prometheus-stack/templates/prometheus-operator/clusterrole.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/clusterrole.yaml
@@ -1,8 +1,11 @@
 {{- if and .Values.prometheusOperator.enabled .Values.global.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: {{ .Values.prometheusOperator.rbac.namespaced | ternary "Role" "ClusterRole" }}
 metadata:
   name: {{ template "kube-prometheus-stack.operator.fullname" . }}
+  {{- if .Values.prometheusOperator.rbac.namespaced }}
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
+  {{- end }}
   labels:
     {{- include "kube-prometheus-stack.prometheus-operator.labels" . | nindent 4 }}
 rules:
@@ -60,6 +63,7 @@ rules:
   - create
   - update
   - delete
+{{- if not .Values.prometheusOperator.rbac.namespaced }}
 - apiGroups:
   - ""
   resources:
@@ -67,6 +71,7 @@ rules:
   verbs:
   - list
   - watch
+{{- end }}
 - apiGroups:
   - ""
   resources:
@@ -105,5 +110,21 @@ rules:
   - get
   - list
   - watch
+{{- end }}
+{{- if .Values.prometheusOperator.rbac.namespaced }}
+  {{- with .Values.prometheusOperator.additionalRulesForRole }}
+  {{- toYaml . | nindent 0 }}
+  {{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ template "kube-prometheus-stack.operator.fullname" . }}
+  labels:
+    {{- include "kube-prometheus-stack.prometheus-operator.labels" . | nindent 4 }}
+rules:
+{{- end }}
+{{- with .Values.prometheusOperator.additionalRulesForClusterRole }}
+{{- toYaml . | nindent 0 }}
 {{- end }}
 {{- end }}
