[prometheus-node-exporter] Add Support to Configure Restart Policy for Node Exporter Daemonset (#4203)
* add support for restart policy

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* move line for restartpolicy up

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* add back braces that was accidentally removed

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* added with statement for restartpolicy so that it is not set

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

* rebase main for chart version update

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

---------

Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -260,6 +260,9 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.restartPolicy }}
+      restartPolicy: {{ . }}
+      {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
