Changed language in values file
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -65,7 +65,7 @@ kubeRBACProxy:
   portName: http
   # Configure a hostPort. If true, hostPort will be enabled in the container and set to service.port.
   enableHostPort: false
-  # Configure the protocol for the container port
+  # Specify the protocol for the container port
   portProtocol: null
 
   resources: {}
