[prometheus] Correct extraVolumeMounts for config-reloader in sts (#4222)
* Corrected reference to configmapReload.prometheus.extraConfigmapMounts on sts.yaml

Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

* Modified sts.yaml

Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

* Modified sts.yaml

Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

---------

Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus/templates/sts.yaml
+++ b/charts/prometheus/templates/sts.yaml
@@ -101,6 +101,9 @@ spec:
             - name: config-volume
               mountPath: /etc/config
               readOnly: true
+          {{- with .Values.configmapReload.prometheus.extraVolumeMounts }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- range .Values.configmapReload.prometheus.extraConfigmapMounts }}
             - name: {{ $.Values.configmapReload.prometheus.name }}-{{ .name }}
               mountPath: {{ .mountPath }}
