🎨 integrate review comment feedback
Signed-off-by: Lukas Klinger <mail@lukasklinger.com>

--- a/charts/prometheus-nginx-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nginx-exporter/templates/deployment.yaml
@@ -4,7 +4,9 @@ kind: Deployment
 metadata:
   name: {{ include "prometheus-nginx-exporter.fullname" . }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
-  annotations: {{ toYaml .Values.additionalAnnotations | nindent 4 }}
+  {{- with .Values.additionalAnnotations }}
+  annotations: {{ toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
 spec:
@@ -21,8 +23,10 @@ spec:
     metadata:
       labels:
         {{- include "prometheus-nginx-exporter.labels" . | indent 8 }}
+      {{- if or .Values.additionalAnnotations .Values.podAnnotations }}
       annotations:
         {{- include "prometheus-nginx-exporter.podAnnotations" . | indent 8 }}
+      {{- end }}
     spec:
       serviceAccountName: {{ template "prometheus-nginx-exporter.serviceAccountName" . }}
       {{- with .Values.initContainers }}
