--- a/charts/prometheus-nginx-exporter/templates/service.yaml
+++ b/charts/prometheus-nginx-exporter/templates/service.yaml
@@ -4,8 +4,10 @@ kind: Service
 metadata:
   name: {{ include "prometheus-nginx-exporter.fullname" . }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
+  {{- if or .Values.additionalAnnotations .Values.service.annotations }}
   annotations:
     {{- include "prometheus-nginx-exporter.serviceAnnotations" . | indent 4 }}
+  {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
 spec:
