--- a/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-nginx-exporter/templates/servicemonitor.yaml
@@ -5,7 +5,9 @@ kind: ServiceMonitor
 metadata:
   name: {{ template "prometheus-nginx-exporter.fullname" .  }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
-  annotations: {{ toYaml .Values.additionalAnnotations | nindent 4 }}
+  {{- with .Values.additionalAnnotations }}
+  annotations: {{ toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
     {{- if .Values.serviceMonitor.additionalLabels }}
