--- a/charts/prometheus-nginx-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-nginx-exporter/templates/serviceaccount.yaml
@@ -3,7 +3,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  annotations: {{ toYaml .Values.additionalAnnotations | nindent 4 }}
+  {{- with .Values.additionalAnnotations }}
+  annotations: {{ toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
   name: {{ template "prometheus-nginx-exporter.serviceAccountName" . }}
