[prometheus-nginx-exporter] Fix Annotation Use in Chart (#4239)
* introduce helper for service & depl annotations

Signed-off-by: Lukas Klinger <mail@lukasklinger.com>

* refactor use of additional annotations

Signed-off-by: Lukas Klinger <mail@lukasklinger.com>

* bump chart version

Signed-off-by: Lukas Klinger <mail@lukasklinger.com>

* integrate review comment feedback

Signed-off-by: Lukas Klinger <mail@lukasklinger.com>

---------

Signed-off-by: Lukas Klinger <mail@lukasklinger.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-nginx-exporter/templates/deployment.yaml
+++ b/charts/prometheus-nginx-exporter/templates/deployment.yaml
@@ -5,8 +5,7 @@ metadata:
   name: {{ include "prometheus-nginx-exporter.fullname" . }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
   {{- with .Values.additionalAnnotations }}
-  annotations:
-  {{ toYaml . | indent 4 }}
+  annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
@@ -24,9 +23,9 @@ spec:
     metadata:
       labels:
         {{- include "prometheus-nginx-exporter.labels" . | indent 8 }}
+      {{- if or .Values.additionalAnnotations .Values.podAnnotations }}
       annotations:
-      {{- with .Values.additionalAnnotations }}
-      {{ toYaml . | indent 6 }}
+        {{- include "prometheus-nginx-exporter.podAnnotations" . | indent 8 }}
       {{- end }}
     spec:
       serviceAccountName: {{ template "prometheus-nginx-exporter.serviceAccountName" . }}
