--- a/charts/prometheus-nginx-exporter/templates/rolebinding.yaml
+++ b/charts/prometheus-nginx-exporter/templates/rolebinding.yaml
@@ -5,9 +5,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "prometheus-nginx-exporter.fullname" . }}
   namespace: {{ template "prometheus-nginx-exporter.namespace" . }}
-  {{- if .Values.additionalAnnotations }}
-  annotations:
-  {{ toYaml .Values.additionalAnnotations | indent 4 }}
+  {{- with .Values.additionalAnnotations }}
+  annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
