--- a/charts/prometheus-nginx-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-nginx-exporter/templates/serviceaccount.yaml
@@ -3,9 +3,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- if .Values.additionalAnnotations }}
-  annotations:
-  {{ toYaml .Values.additionalAnnotations | indent 4 }}
+  {{- with .Values.additionalAnnotations }}
+  annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
   labels:
     {{- include "prometheus-nginx-exporter.labels" . | indent 4 }}
