feat(prometheus-kafka-exporter): Allow configuration of custom labels on deployment and pod
Signed-off-by: Mats Andresen <mats.andresen@gmx.de>

--- a/charts/prometheus-kafka-exporter/templates/deployment.yaml
+++ b/charts/prometheus-kafka-exporter/templates/deployment.yaml
@@ -7,6 +7,9 @@ metadata:
     chart: {{ template "prometheus-kafka-exporter.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    {{- with .Values.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -20,6 +23,9 @@ spec:
       labels:
         app: {{ template "prometheus-kafka-exporter.name" . }}
         release: {{ .Release.Name }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- if .Values.securityContext }}
       securityContext:
