--- a/charts/prometheus-kafka-exporter/values.yaml
+++ b/charts/prometheus-kafka-exporter/values.yaml
@@ -9,6 +9,8 @@ command: []
 
 imagePullSecrets: []
 
+labels: {}
+
 global:
   # To help compatibility with other charts which use global.imagePullSecrets.
   # Allow either an array of {name: pullSecret} maps (k8s-style), or an array of strings (more common helm-style).
@@ -125,6 +127,8 @@ prometheus:
     #   targetLabel: nodename
     #   replacement: $1
     #   action: replace
+
+podLabels: {}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
