feat(prometheus): introduce configMapAnnotations
Signed-off-by: clavinjune <24659468+clavinjune@users.noreply.github.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -533,6 +533,10 @@ server:
   ##
   revisionHistoryLimit: 10
 
+  ## Annotations to be added to ConfigMap
+  ##
+  configMapAnnotations: {}
+
   ## Annotations to be added to deployment
   ##
   deploymentAnnotations: {}
