--- a/charts/prometheus/templates/cm.yaml
+++ b/charts/prometheus/templates/cm.yaml
@@ -2,6 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+{{- if .Values.server.configMapAnnotations }}
+  annotations:
+    {{ toYaml .Values.server.configMapAnnotations | nindent 4 }}
+{{- end }}
   labels:
     {{- include "prometheus.server.labels" . | nindent 4 }}
     {{- with .Values.server.extraConfigmapLabels }}
