chore(prometheus): change if using with notation
Co-authored-by: MH <zanhsieh@gmail.com>
Signed-off-by: Clavianus Juneardo <24659468+clavinjune@users.noreply.github.com>

--- a/charts/prometheus/templates/cm.yaml
+++ b/charts/prometheus/templates/cm.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-{{- if .Values.server.configMapAnnotations }}
+{{- with .Values.server.configMapAnnotations }}
   annotations:
-    {{ toYaml .Values.server.configMapAnnotations | nindent 4 }}
+    {{- toYaml .Values.server.configMapAnnotations | nindent 4 }}
 {{- end }}
   labels:
     {{- include "prometheus.server.labels" . | nindent 4 }}
