feat(prometheus-elasticsearch-exporter): add support for ILM metrics
Signed-off-by: Julien Leloup <julien.leloup@gitguardian.com>

--- a/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
@@ -117,6 +117,9 @@ spec:
                     {{- if .Values.es.data_stream }}
                     "--es.data_stream",
                     {{- end }}
+                    {{- if .Values.es.ilm }}
+                    "--es.ilm",
+                    {{- end }}
                     "--es.timeout={{ .Values.es.timeout }}",
                     {{- if .Values.es.sslSkipVerify }}
                     "--es.ssl-skip-verify",
