--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -48,7 +48,8 @@ log:
   format: logfmt
   level: info
 
-resources: {}
+resources:
+  {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
@@ -182,6 +183,10 @@ es:
   ##
   data_stream: false
 
+  ## If true, query stats for Index Lifecycle Management.
+  ##
+  ilm: false
+
   ## Timeout for trying to get stats from Elasticsearch. (ex: 20s)
   ##
   timeout: 30s
@@ -254,7 +259,8 @@ prometheusRule:
   enabled: false
   #  namespace: monitoring
   labels: {}
-  rules: []
+  rules:
+    []
     # - record: elasticsearch_filesystem_data_used_percent
     #   expr: |
     #     100 * (elasticsearch_filesystem_data_size_bytes{service="{{ template "elasticsearch-exporter.fullname" . }}"} - elasticsearch_filesystem_data_free_bytes{service="{{ template "elasticsearch-exporter.fullname" . }}"})
