[prometheus-elasticsearch-exporter] Support ILM metrics (#4252)
* feat(prometheus-elasticsearch-exporter): add support for ILM metrics

Signed-off-by: Julien Leloup <julien.leloup@gitguardian.com>

* feat(prometheus-elasticsearch-exporter): fix format

Signed-off-by: Julien Leloup <julien.leloup@gitguardian.com>

---------

Signed-off-by: Julien Leloup <julien.leloup@gitguardian.com>

--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -182,6 +182,10 @@ es:
   ##
   data_stream: false
 
+  ## If true, query stats for Index Lifecycle Management.
+  ##
+  ilm: false
+
   ## Timeout for trying to get stats from Elasticsearch. (ex: 20s)
   ##
   timeout: 30s
