[prometheus-pushgateway] Allow disabling automount of service account token
Signed-off-by: Øyvind Strømmen <insula.ventus@gmail.com>

--- a/charts/prometheus-pushgateway/templates/serviceaccount.yaml
+++ b/charts/prometheus-pushgateway/templates/serviceaccount.yaml
@@ -13,4 +13,5 @@ metadata:
     {{- end }}
   name: {{ include "prometheus-pushgateway.serviceAccountName" . }}
   namespace: {{ template "prometheus-pushgateway.namespace" . }}
+automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
 {{- end }}
