--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -32,6 +32,9 @@ service:
   loadBalancerIP: ""
   loadBalancerSourceRanges: []
 
+# Whether to automatically mount a service account token into the pod
+automountServiceAccountToken: true
+
 # Optional pod annotations
 podAnnotations: {}
 
