define port field in selfservicemonitor
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
@@ -16,6 +16,9 @@ spec:
     interval: {{ .Values.serviceMonitor.selfMonitor.interval }}
     scrapeTimeout: {{ .Values.serviceMonitor.selfMonitor.scrapeTimeout }}
     scheme: http
+    {{- with .Values.serviceMonitor.selfMonitor.port }}
+    port: {{ . }}
+    {{- end }}
     {{- if .Values.serviceMonitor.selfMonitor.additionalRelabeling }}
     relabelings:
       {{- toYaml .Values.serviceMonitor.selfMonitor.additionalRelabeling | nindent 6 }}
